--- a/app/index.html
+++ b/app/index.html
@@ -5,5 +5,6 @@ body_class: index homepage
 ---
 
 {% include landing-hero.html %}
-{% include landing-services.html %}
 {% include landing-stats.html %}
+{% include landing-services.html %}
+{% include shared/cta-bar.html %}
