add products detail page

--- a/app/products.html
+++ b/app/products.html
@@ -6,6 +6,12 @@ body_class: products
 
 <section id="product">
   {% include products-hero.html %}
-  {% include products-filter.html %}
+  <div class="container inner-bottom">
+    <div class="row">
+      <div class="col-sm-12 portfolio">
+        {% include products-filter.html %}
+      </div><!-- /.col -->
+    </div><!-- /.row -->
+  </div><!-- /.container -->
 </section>
 {% include shared/cta-bar.html %}
