update suppliers page with map

--- a/app/suppliers.html
+++ b/app/suppliers.html
@@ -6,4 +6,5 @@ body_class: suppliers
 
 {% include suppliers-hero.html %}
 {% include suppliers-list.html %}
+{% include suppliers-map.html %}
 {% include shared/cta-bar.html %}
