add about page/timeline

--- a/app/about.html
+++ b/app/about.html
@@ -4,4 +4,7 @@ title: about
 body_class: about
 ---
 
+{% include about-hero.html %}
+{% include about-info.html %}
 {% include timeline.html %}
+{% include shared/cta-bar.html %}
