fix borer miner page filters

--- a/app/products/borer-miner-products/index.html
+++ b/app/products/borer-miner-products/index.html
@@ -5,11 +5,11 @@ body_class: products
 ---
 
 <section id="product">
-  {% include products-hero.html %}
+  {% include products-hero-borer-miner.html %}
   <div class="container inner-bottom">
     <div class="row">
       <div class="col-sm-12 portfolio">
-        {% include products-filter.html %}
+        {% include products-filter-borer-miner.html %}
       </div><!-- /.col -->
     </div><!-- /.row -->
   </div><!-- /.container -->
