update products for site from Randy’s emails

--- a/app/products/38012-p-ta/index.html
+++ b/app/products/38012-p-ta/index.html
@@ -15,7 +15,7 @@ body_class: products-detail
 
           <div class="item">
             <figure>
-              <img src="/images/products/dwg4.png" alt="">
+              <img src="/images/products/38012-p-ta.png" alt="">
             </figure>
           </div><!-- /.item -->
 
@@ -24,10 +24,10 @@ body_class: products-detail
 
       <div class="col-md-4 inner-left-sm">
         <header>
-          <h2>Dwg4</h2>
+          <h2>38012 P-TA</h2>
           <ul class="item-details inner-top-xs outer-top-xs border-top">
-            <li class="categories">Cutter Chains</li>
-            <li class="download-pdf"><a href="/pdfs/dwg4.pdf">Download the PDF</a></li>
+            <li class="categories">Cutter Bars</li>
+            <li class="download-pdf"><a href="/pdfs/38012-p-ta.pdf">Download the PDF</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
