--- a/app/products/da-350/index.html
+++ b/app/products/da-350/index.html
@@ -30,6 +30,8 @@ body_class: products-detail
             <li class="download-pdf"><a href="/pdfs/da-350.pdf">Download the PDF</a></li>
             <li class="download-pdf"><a href="/pdfs/da-350-maintenance.pdf">Download the Maintenance Sheet</a></li>
             <li class="download-pdf"><a href="/pdfs/da-350-measurement.pdf">Download the Measurement Sheet</a></li>
+            <li class="download-pdf"><a href="/pdfs/c-14731-350.pdf">Download the Chain Press PDF</a></li>
+            <li class="download-pdf"><a href="/pdfs/c-14731-350-operations-manual.pdf">Download the Chain Press Operations Manual</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
