--- a/app/products/da-434/index.html
+++ b/app/products/da-434/index.html
@@ -29,6 +29,8 @@ body_class: products-detail
             <li class="categories">Conveyor Chains</li>
             <li class="download-pdf"><a href="/pdfs/da-434.pdf">Download the PDF</a></li>
             <li class="download-pdf"><a href="/pdfs/434-515-550-615-maintenance.pdf">Download the Maintenance Sheet</a></li>
+            <li class="download-pdf"><a href="/pdfs/c-14731.pdf">Download the Chain Press PDF</a></li>
+            <li class="download-pdf"><a href="/pdfs/c-14731-operations-manual.pdf">Download the Chain Press Operations Manual</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
