--- a/app/products/na-5154-mt/index.html
+++ b/app/products/na-5154-mt/index.html
@@ -15,7 +15,7 @@ body_class: products-detail
 
           <div class="item">
             <figure>
-              <img src="/images/products/da-615.png" alt="">
+              <img src="/images/products/na-5154-mt.png" alt="">
             </figure>
           </div><!-- /.item -->
 
@@ -24,13 +24,10 @@ body_class: products-detail
 
       <div class="col-md-4 inner-left-sm">
         <header>
-          <h2>DA-615</h2>
+          <h2>NA-5154-MT</h2>
           <ul class="item-details inner-top-xs outer-top-xs border-top">
             <li class="categories">Conveyor Chains</li>
-            <li class="download-pdf"><a href="/pdfs/da-615.pdf">Download the PDF</a></li>
-            <li class="download-pdf"><a href="/pdfs/434-515-550-615-maintenance.pdf">Download the Maintenance Sheet</a></li>
-            <li class="download-pdf"><a href="/pdfs/c-14731.pdf">Download the Chain Press PDF</a></li>
-            <li class="download-pdf"><a href="/pdfs/c-14731-operations-manual.pdf">Download the Chain Press Operations Manual</a></li>
+            <li class="download-pdf"><a href="/pdfs/na-5154-mt.pdf">Download the PDF</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
