--- a/app/products/various-chain-sprockets/index.html
+++ b/app/products/various-chain-sprockets/index.html
@@ -15,7 +15,7 @@ body_class: products-detail
 
           <div class="item">
             <figure>
-              <img src="/images/products/dwg2.png" alt="">
+              <img src="/images/products/various-chain-sprockets.png" alt="">
             </figure>
           </div><!-- /.item -->
 
@@ -24,10 +24,10 @@ body_class: products-detail
 
       <div class="col-md-4 inner-left-sm">
         <header>
-          <h2>Dwg2</h2>
+          <h2>Various Chain Sprockets</h2>
           <ul class="item-details inner-top-xs outer-top-xs border-top">
-            <li class="categories">Cutter Bars</li>
-            <li class="download-pdf"><a href="/pdfs/dwg2.pdf">Download the PDF</a></li>
+            <li class="categories">Sprockets</li>
+            <li class="download-pdf"><a href="/pdfs/various-chain-sprockets.pdf">Download the PDF</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
