--- a/app/products/38011-h/index.html
+++ b/app/products/38011-h/index.html
@@ -15,7 +15,7 @@ body_class: products-detail
 
           <div class="item">
             <figure>
-              <img src="/images/products/dwg1.png" alt="">
+              <img src="/images/products/38011-h.png" alt="">
             </figure>
           </div><!-- /.item -->
 
@@ -24,10 +24,10 @@ body_class: products-detail
 
       <div class="col-md-4 inner-left-sm">
         <header>
-          <h2>Dwg1</h2>
+          <h2>38011-H</h2>
           <ul class="item-details inner-top-xs outer-top-xs border-top">
             <li class="categories">Cutter Bars</li>
-            <li class="download-pdf"><a href="/pdfs/dwg1.pdf">Download the PDF</a></li>
+            <li class="download-pdf"><a href="/pdfs/38011-h.pdf">Download the PDF</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
