--- a/app/products/da-550/index.html
+++ b/app/products/da-550/index.html
@@ -15,6 +15,12 @@ body_class: products-detail
 
           <div class="item">
             <figure>
+              <img src="/images/products/da-550-display.jpg" alt="">
+            </figure>
+          </div><!-- /.item -->
+
+          <div class="item">
+            <figure>
               <img src="/images/products/da-550.png" alt="">
             </figure>
           </div><!-- /.item -->
