update/add photos & pdfs for CC-720 and CC-7M22 as well as remove photos from 550 series footshaft kits

--- a/app/products/cc-7m22/index.html
+++ b/app/products/cc-7m22/index.html
@@ -15,7 +15,7 @@ body_class: products-detail
 
           <div class="item">
             <figure>
-              <img src="/images/products/550-shaft-kit.png" alt="">
+              <img src="/images/products/cc-7m22.png" alt="">
             </figure>
           </div><!-- /.item -->
 
@@ -24,10 +24,10 @@ body_class: products-detail
 
       <div class="col-md-4 inner-left-sm">
         <header>
-          <h2>Stub Shaft Kit 550</h2>
+          <h2>CC-7M22</h2>
           <ul class="item-details inner-top-xs outer-top-xs border-top">
-            <li class="categories">Footshaft Assemblies</li>
-            <li class="download-pdf"><a href="/pdfs/550-shaft-kit.pdf">Download the PDF</a></li>
+            <li class="categories">Crawler Chains</li>
+            <li class="download-pdf"><a href="/pdfs/cc-7m22.pdf">Download the PDF</a></li>
           </ul><!-- /.item-details -->
         </header>
       </div><!-- /.col -->
